packages/babylon/test/fixtures/esprima/invalid-syntax/.migrated_0034/input.js
var source = 'x\\u002a';
